--- a/CS170/lectures.tex
+++ b/CS170/lectures.tex
@@ -23,4 +23,5 @@
     \include{./Lectures/lecture19.tex}
     \include{./Lectures/lecture20.tex}
     \include{./Lectures/lecture21.tex}
+    \include{./Lectures/lecture22.tex}
 \end{document}
