--- a/CS170/lectures.tex
+++ b/CS170/lectures.tex
@@ -24,4 +24,5 @@
     \include{./Lectures/lecture20.tex}
     \include{./Lectures/lecture21.tex}
     \include{./Lectures/lecture22.tex}
+    \include{./Lectures/lecture23.tex}
 \end{document}
