--- a/CS170/lectures.tex
+++ b/CS170/lectures.tex
@@ -26,4 +26,5 @@
     \include{./Lectures/lecture22.tex}
     \include{./Lectures/lecture23.tex}
     \include{./Lectures/lecture24.tex}
+    \include{./Lectures/lecture25.tex}
 \end{document}
