--- a/CS170/Lectures/lecture25.tex
+++ b/CS170/Lectures/lecture25.tex
@@ -1,4 +1,5 @@
-\subsection{Lower Bounds and Alternate Models of Computation}
+\section{Lower Bounds and Alternate Models of Computation}
+\subsection{Lecture 25}
 \subsubsection{Lower Bounds}
 
 So far, we have tried to minimize computational resources to solve various problems.
