--- a/PHYS137A/preamble.tex
+++ b/PHYS137A/preamble.tex
@@ -260,6 +260,7 @@
 \newcommand{\blue}{\color{blue}}
 \newcommand{\black}{\color{black}}
 \newcommand{\Question}[1]{\color{black}\section{ #1 }\color{blue}}
+\newcommand{\mbf}[1]{\mathbf{#1}}
 
 %%% Title Page
 \renewcommand\epigraphflush{flushright}
