--- a/PHYS137A/Lectures/lecture2.tex
+++ b/PHYS137A/Lectures/lecture2.tex
@@ -44,7 +44,7 @@ In classical statistical mechanics, the equipartition each mode of a system is e
 \end{align*}
 This means the energy density (by volume) is:
 \begin{align*}
-    \kappa = \frac{8\pi}{c^3} f^2 k_B T \dd{f}
+    \dd{\kappa} = \frac{8\pi}{c^3} f^2 k_B T \dd{f}
 \end{align*}
 and note since $f = \frac{c}{\lambda}$, $\dd{f} = \frac{-c}{\lambda^2} \dd{\lambda}$ and:
 \begin{align*}
