--- a/PHYS137A/lectures.tex
+++ b/PHYS137A/lectures.tex
@@ -5,4 +5,5 @@
     \include{title.tex}
     \include{./Lectures/lecture1.tex}
     \include{./Lectures/lecture2.tex}
+    \include{./Lectures/lecture3.tex}
 \end{document}
