--- a/PHYS137A/Lectures/lecture3.tex
+++ b/PHYS137A/Lectures/lecture3.tex
@@ -1,4 +1,4 @@
-\section{Lecture 3: }
+\section{Lecture 3: Matter as a wave}
 
 \subsection{Everything is a wave (in Quantum Mechanics)}
 
@@ -58,6 +58,7 @@ With repeated measurements, the long-time probability for finding the particle w
 Think about your favorite particle. It looks something like this:
 
 \includegraphics[width=400px]{basic_wave.jpeg}
+
 Unfortunately this basic wave spills everywhere in space. This is how our physics translates: 
 \begin{align*}
     E &= hf = \hbar \omega \\
@@ -77,11 +78,3 @@ In 3-D, we have (using dot products):
 \[ \mbf{p} = \hbar \mbf{k} \]
 which means that the operator looks like:
 \[ - i \hbar \nabla \Psi = \mbf{p} \Psi\]
-
-\subsection{Wave Packets and Normalization}
-By probability density laws,
-\[ \int{\mathbb{R}^3} |\Psi(\mbf{r}, t)|^2 \dd{\mbf{r}} = 1 \]
-but for this basic wave that spans all of space, this diverges! (Or the wavefunction is zero everywhere). Instead we have
-wave packets that are much more localized.
-
-\includegraphics[width=400px]{wave_packet.jpeg}
